# theseed

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  todo.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: deploy.yml
apps/: CMakeLists.txt
apps/baseapp/: CMakeLists.txt  main.cpp
apps/cellapp/: CMakeLists.txt  main.cpp
apps/dbapp/: CMakeLists.txt  main.cpp
apps/loginapp/: CMakeLists.txt  main.cpp
apps/machine/: CMakeLists.txt  main.cpp
apps/realmapp/: CMakeLists.txt  main.cpp
docs/: index.md
docs/.vitepress/: config.ts
docs/design/: 00-runtime-core.md  01-developer-experience.md  02-observability.md  03-infrastructure.md  04-client-sdk.md  05-script-security.md  06-data-definition-persistence.md  index.md
docs/design/0-foundation/: 01-mvp-architecture-baseline.md  02-audit-scope-and-layering.md  03-repository-and-build-layout.md  04-modern-mmo-engine-positioning.md  index.md
docs/design/1-core/: 01-tick-model.md  02-entity-system.md  03-aoi-and-space.md  04-ghost-and-witness.md  05-communication.md  06-property-sync.md  07-entity-migration.md  08-timer-and-pool.md  09-fault-tolerance.md  10-backup-hash-and-ha.md  11-aoi-update-schemes-and-load-bounds.md  12-bsp-rebalance-and-offload.md
docs/design/1-runtime-model/: 01-tick-model.md  02-entity-system.md  03-timer-and-memory.md  04-io-runtime-and-backend-abstraction.md
docs/design/2-data/: 01-data-definition.md  02-persistence.md  03-server-merge.md  04-secondary-db.md  05-data-ops-toolchain.md
docs/design/2-replication-and-space/: 01-space-topology-and-aoi.md  02-ghost-and-witness.md  03-runtime-communication-and-transport.md  04-property-replication.md  05-entity-migration.md  06-aoi-update-and-load-bounds.md  07-bsp-rebalance-and-offload.md
docs/design/3-cluster-and-availability/: 01-fault-tolerance.md  02-backup-hash-and-ha.md  03-cluster-lifecycle.md  04-runtime-profiler-and-load-feedback.md
docs/design/3-infrastructure/: 01-gateway.md  02-message-bus.md  (+5 more)
res/entities/: Avatar.xml
src/: CMakeLists.txt
src/control/: CMakeLists.txt
src/control/include/theseed/control/machine/: HostProbe.h  MachineAgent.h  MachineSnapshotCodec.h  ProcessSupervisor.h
src/control/machine/: HostProbe.cpp  MachineAgent.cpp  MachineSnapshotCodec.cpp  ProcessSupervisor.cpp
src/core/: BaseApp.cpp  BaseRuntime.cpp  Bundle.cpp  CMakeLists.txt  CellApp.cpp  Channel.cpp  EntityData.cpp  EntityDefLoader.cpp  EntityDefRegistry.cpp  FileEntityStore.cpp  MemoryStream.cpp  MessageHeader.cpp  ObjectPool.cpp  TimerWheel.cpp
src/core/include/theseed/core/: BaseApp.h  BaseRuntime.h  Bundle.h  CellApp.h  Channel.h  EntityData.h  EntityDefLoader.h  EntityDefRegistry.h  FileEntityStore.h  IEntityStore.h  MemoryStream.h  MessageHeader.h  ObjectPool.h  TimerWheel.h
src/db/: CMakeLists.txt  DBApp.cpp  DBProtocol.cpp  RemoteEntityStore.cpp
src/db/include/theseed/db/: DBApp.h  DBProtocol.h  RemoteEntityStore.h
src/foundation/: Bundle.cpp  CMakeLists.txt  Channel.cpp  ChannelRouter.cpp  MemoryStream.cpp  MessageHeader.cpp  ObjectPool.cpp  TimerWheel.cpp
src/foundation/include/theseed/foundation/: Bundle.h  Channel.h  ChannelRouter.h  MemoryStream.h  MessageHeader.h  ObjectPool.h  TimerWheel.h
src/login/: CMakeLists.txt  ClientProtocol.cpp  ClientSession.cpp  LoginApp.cpp  LoginProtocol.cpp  SessionToken.cpp
src/login/include/theseed/login/: ClientProtocol.h  ClientSession.h  LoginApp.h  LoginProtocol.h  LoginTypes.h  SessionToken.h
src/realm/: CMakeLists.txt  RealmApp.cpp
src/realm/include/theseed/realm/: RealmApp.h
src/runtime/: AOI.cpp  CMakeLists.txt  CellRuntime.cpp  Controller.cpp  DirtyMask.cpp  Entity.cpp  EntityCall.cpp  EntityDef.cpp  EntityMigration.cpp  GhostManager.cpp  IORuntime.cpp  InMemoryBytePipe.cpp  InvocationCodec.cpp  NetworkNode.cpp  NetworkTransport.cpp  PipedTransport.cpp  PropertyBlock.cpp  PropertyReplication.cpp  RuntimeLoop.cpp  RuntimeTransport.cpp  Space.cpp  SpaceRuntime.cpp  TcpConnection.cpp  TcpListener.cpp  TickScheduler.cpp  TransportHub.cpp  Witness.cpp
src/runtime/include/theseed/runtime/: AOI.h  CellRuntime.h  Controller.h  DirtyMask.h  Entity.h  EntityCall.h  EntityDef.h  EntityMigration.h  GhostManager.h  IBytePipe.h  IORuntime.h  InMemoryBytePipe.h  InvocationCodec.h  NetworkNode.h  NetworkTransport.h  PipedTransport.h  PropertyBlock.h  PropertyReplication.h  RuntimeLoop.h  RuntimeTransport.h  RuntimeTypes.h  Space.h  SpaceRuntime.h  TcpConnection.h  TcpListener.h  TickScheduler.h  TransportHub.h  Witness.h
tests/: CMakeLists.txt
tests/core/: BaseAppTest.cpp  BaseRuntimeTest.cpp  BundleTest.cpp  CMakeLists.txt  CellAppTest.cpp  ChannelTest.cpp  EntityDataTest.cpp  EntityDefLoaderTest.cpp  EntityDefRegistryTest.cpp  EntityRestoreTest.cpp  EntityTimerTest.cpp  FileEntityStoreTest.cpp  IntegrationTest.cpp  MemoryStreamTest.cpp  MultiCellAppTcpTest.cpp  ObjectPoolTest.cpp  PropertyMetadataTest.cpp  PropertySyncDirectionTest.cpp  PropertySyncTest.cpp  RemoteEntityTest.cpp  TcpIntegrationTest.cpp  TickDrivenTcpTest.cpp  TickNodeLifecycleTest.cpp  TimerWheelTest.cpp
tests/db/: CMakeLists.txt  DBAppTest.cpp
tests/foundation/: BundleTest.cpp  CMakeLists.txt  ChannelRouterTest.cpp  ChannelTest.cpp  MemoryStreamTest.cpp  ObjectPoolTest.cpp  TimerWheelTest.cpp
tests/login/: CMakeLists.txt  ClientProtocolTest.cpp  LoginAppTest.cpp  LoginProtocolTest.cpp
tests/realm/: CMakeLists.txt  RealmAppTest.cpp
tests/runtime/: AOITest.cpp  AOIWitnessIntegrationTest.cpp  AoIEventTest.cpp  CMakeLists.txt  CellEntityTimerTest.cpp  CellRuntimeTest.cpp  ControllerTest.cpp  CrossListAOITest.cpp  EntityCoreTest.cpp  EntityEventTest.cpp  EntityLifecycleTest.cpp  EntityMigrationTest.cpp  EntityTagTest.cpp  InvocationCodecTest.cpp  MigrationRuntimeTest.cpp  NetworkNodeTest.cpp  NetworkTransportTest.cpp  PropertyCallbackTest.cpp  PropertyReplicationTest.cpp  RuntimeFrameworkTest.cpp  RuntimeTransportTest.cpp  SpaceRuntimeTest.cpp  TcpTransportTest.cpp  TransportHubTest.cpp  WitnessGhostTest.cpp
tests/smoke/: SmokeTest.cpp
(+34 files in other folders)
